# tlogonline

./: .gitignore  ADIF_OPTIMIZATION.md  API_DOCUMENTATION.md  CHANGES_BANDS_MODES.md  CHANGES_SUMMARY.md  CHANGES_SUMMARY_PROFILE.md  COMPLETE_PROJECT_SUMMARY.md  CSS_ALIGNMENT_FIX.md  CURSOR_FIX.md  DROPDOWN_Z_INDEX_FIX.md  ENTER_KEY_AND_BORDERS.md  FINAL_CLEANUP_SUMMARY.md  FINAL_LOTW_SUMMARY.md  FINAL_NAVBAR_SUCCESS.md  FINAL_REPORT_PROFILE.md  FINAL_SOLUTION_REPORT.md  FIXES_PROFILE.md  GAP_ENHANCEMENT_CHANGES.md  HEADER_CENTERING.md  HEADER_TEXT_COLOR_CHANGE.md  HEADER_TEXT_OVERFLOW_FIX.md  INLINE_STYLES_FIX_REPORT.md  LOTW_AJAX_FILTER_REPORT.md  LOTW_COMPLETE_LOGIC_FIX.md  LOTW_FIX_COMPLETE.md  LOTW_PAGE_STYLES_SUCCESS.md  LOTW_QSO_MODAL_FIX.md  LOTW_STYLES_FIX_REPORT.md  MODE_BADGES.md  NAME_SURNAME_FIX.md  NAVBAR_ADAPTIVE_GAP.md  NAVBAR_FINAL_FIX_OVERLAP.md  NAVBAR_FIX_REPORT.md  NAVBAR_FULL_WIDTH_FIX.md  NAVBAR_ICON_FIX_FINAL.md  NAVBAR_OVERLAP_FINAL_SOLUTION.md  NAVBAR_SIMPLE_RETURN.md  PROFILE_TESTING_GUIDE.md  PROJECT_STATUS.md  QRZ_COM_FORM_FOR_USER.md  (+109 more)
frontend/: apps.py  models.py  urls.py  views.py  views_logbook.py
log_online/: apps.py  urls.py  views.py
myproject/: asgi.py  settings.py  urls.py
rest_api_client/: .gitignore  README.md  __init__.py  api_client.py  database.py  main.py  main_window.py  main_window_old.py  qso_dialog.py  requirements.txt  run.bat  run.sh  settings.py  tables.py  tabs.py  workers.py
temp/: cosmos_1_1769345870.docx  cosmos_1_1769347092.docx  cosmos_1_1769347601.docx  cosmos_1_1769347614.docx  cosmos_1_1769347632.docx  (+7 more)
(+194 files in other folders)
